fix scrollBar in lessons

--- a/components/lessons/Dialog.module.scss
+++ b/components/lessons/Dialog.module.scss
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: column;
   width: fit-content;
-  margin: 0 1rem 1rem 0;
+  margin: 1rem 1rem 1rem 0;
 }
 
 .currentTask {
